Kube/nodejs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs
  template:
    metadata:
      labels:
        app: nodejs
    spec:
      containers:
        - name: nodeapp-test-container
          image: mahmoudaboud/nodeapp_test:latest
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
