Kube/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-alb
  rules:
  - http:
      paths:
      - path: /nodejs/*
        pathType: Prefix
        backend:
          service: 
            name: nodejs-service
            port:
              number: 80
